--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css"/>
+    <title>Momentum App</title>
 </head>
 <body>
-    Test
+    <div class="box">
+        <form id="login-form" class="hidden">
+            <input required maxlength="15" type="text" placeholder="What is your name?"/>
+            <button>Log In</button>
+        </form>
+        <div id="visible" class="hidden">
+            <h1 id="greeting"></h1>
+            <hr>
+            <h2 id="clock"></h2>
+        </div>
+        
+    </div>
+    <script src="js/greeting.js"></script>
+    <script src="js/clock.js"></script>
+    <script src="js/backgroundImg.js"></script>
 </body>
 </html>
