--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
             <button>Log In</button>
         </form>
         <div id="visible" class="hidden">
+            <div id="weather">
+                <span></span>
+            </div>
             <h1 id="clock"></h1>
+
             <hr>
             <h1 id="greeting"></h1>
             <form id="todo-form">
@@ -25,6 +29,7 @@
         </div>
     </div>
     <script src="js/greeting.js"></script>
+    <script src="js/weather.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/backgroundImg.js"></script>
     <script src="js/todo.js"></script>
